tests/02_empty_and_type_errors.stderr
error: Unsupported type for variant identifier
 --> tests/02_empty_and_type_errors.rs:5:9
  |
5 |         *mut u32,
  |         ^
