tests/02_empty_and_type_errors.rs
// empty no longer causes errors (or anything else but waist)

nodyn::wrap! {
  TestTypes {
        * mut u32,
  }
}

fn main() {}
